--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VITE_APP_VERSION=0.0.1
 
 # Development
 VITE_DEV_MODE=true
-
+VITE_GEMINI_KEY=AIzaSyCOp3-qGoAjZds0lIrMvNylj-OavEBIqpw
 # API Configuration (example)
 # VITE_API_BASE_URL=http://localhost:8000
 # VITE_API_TIMEOUT=5000
